# wire-libraries-ts

./: .gitignore  .pnpmfile.cjs  AGENTS.md  BUILD.bazel  CLAUDE.md  README.md  STYLE.md  eslint.config.mjs  jest.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: ci.yaml  dependency-audit.yaml  publish-npm.yaml
etc/tsconfig/: tsconfig.base.jest.json  tsconfig.base.json
examples/web-logging-example/: package.json  tsconfig.json  webpack.config.js
examples/web-logging-example/public/: index.html
examples/web-logging-example/src/: index.js  index.ts  web-logging-example.ts
scripts/: clean-ts.fish  fix-hybrid-output.mjs
