# =============================================================================
# wire-libraries-ts — @wireio/sdk-core, @wireio/shared, wallet ext, and the
#                      OPP model code generators. pnpm workspace (packages/*).
# =============================================================================
# Chain position 3: depends on //wire-sysio:build. This is a REAL functional
# edge, not just ordering: the repo's .pnpmfile.cjs resolves
# @wireio/opp-typescript-models from wire-sysio/build/opp/typescript, and
# sdk-core's tsc build references symbols from the current proto (e.g.
# ChainKind.EVM). Build wire-sysio first and that codegen exists; skip it and
# pnpm falls back to the stale registry @wireio/opp-typescript-models, which
# fails to compile (verified 2026-05-26). The wire-sysio dep guarantees the
# codegen is on disk before this runs.
# =============================================================================

load("//:build_defs.bzl", "js_workspace_build")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(
        ["**"],
        exclude = [
            "node_modules/**",
            "**/lib/**",
            "**/dist/**",
            ".git/**",
            "BUILD.bazel",
        ],
    ),
)

js_workspace_build(
    name = "build",
    # wire-sysio emits the OPP codegen this repo's .pnpmfile.cjs consumes.
    deps = ["//wire-sysio:build"],
    install_cmd = "WIRE_LINK_LOCAL_OPP_MODELS=1 pnpm install --lockfile=false",
    package_manager = "pnpm",
    tags = ["ts"],
    # Unit tests gate the platform build (and thus the e2e gate) — skippable
    # only via the shared SKIP_TESTS knob (see js_workspace_build).
    test_cmd = "pnpm test",
    working_dir = "wire-libraries-ts",
)
